{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Land",
            "id": "657452bb-1cac-4270-aeb1-4800f162f609",
            "actions": [
                {
                    "name": "MoveX",
                    "type": "PassThrough",
                    "id": "554d2f41-bc11-4729-aeee-023cad132023",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveY",
                    "type": "PassThrough",
                    "id": "f9f800d7-dcdd-40b7-95be-b8edc0cff2b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Swap",
                    "type": "Button",
                    "id": "4c51ede2-de7f-4ddb-8810-633566a39907",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "3074e13c-983e-409b-8bd7-00926d9bab57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Sideways",
                    "id": "0a09d145-eccd-4c33-bfea-1a8e59a3385c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "605b24fe-b0d2-43d1-95c7-996e83f7daa0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7a397fe2-f49b-4cde-bd99-356902dd4353",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Vertical",
                    "id": "cee97068-2f49-4623-8331-91dc9cdbfe7d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d1f7287e-8acd-4b1c-ab30-6102b1582a4b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bf08dd06-0313-4aba-8d0e-2a7107a8125b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c4cdd857-4d0d-4f41-84d8-24d888cf8da0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf49e47f-5536-4611-8ac8-e2440341c247",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}